infrastructure/_overlays/dev/configurations/overrides/ingress/exposure/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: controller-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ingress.internal.${cluster_name}.${base_domain}
    external-dns.alpha.kubernetes.io/target: internal.${cluster_name}.${base_domain}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ingress.internal.${cluster_name}.${base_domain}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: wildcard.${cluster_name}.${base_domain}.tls
